First try at fixing wrapping on narrow window.

--- a/redesign/template.css
+++ b/redesign/template.css
@@ -143,7 +143,7 @@ background-repeat:no-repeat;
  * Head -> Logo, Hauptnavigation, Suche, Logout
  */
 #horde-head{
-width:100%;
+min-width:980px;
 height:34px;
 background-color:#2e464f;
 background-image: url('sysimg/head-bg.png');
@@ -165,6 +165,7 @@ border-bottom:2px solid #000;
   }
   #horde-navigation{
   float:left;
+  min-width:490px;
   }
     .horde-point-left{
     float:left;
@@ -224,8 +225,9 @@ border-bottom:2px solid #000;
     }
   #horde-search{
   float:right;
-  width:230px;
+  min-width:230px;
   padding:0px 20px 0px 0px;
+  overflow:hidden;
   }
     #horde-search #horde-input{
     float:left;
