--- a/redesign/webmailer.css
+++ b/redesign/webmailer.css
@@ -316,6 +316,7 @@ background-repeat:repeat-x;
  */
 .imp-button{
 height:29px;
+min-width:660px;
 padding:0px 18px 0px 0px;
 background-image:url('img/button-bg.png');
 background-repeat:repeat-x;
@@ -362,6 +363,7 @@ border-bottom:1px solid #d0d0d0;
  */
 .imp-tablehead{
 height:21px;
+min-width:600px;
 padding:0px 20px 0px 0px;
 background-image:url('img/tablehead-bg.png');
 background-repeat:repeat-x;
@@ -385,6 +387,7 @@ background-repeat:repeat-x;
  */
 .imp-wrapper-tablecol{
 height:195px;
+min-width:600px;
 overflow:auto;
 }
   .imp-tablecol{
@@ -465,12 +468,13 @@ overflow:auto;
 #imp-preview{
 position:absolute;
 height:auto;
+min-width:600px;
 top:256px;
 bottom:0;
 overflow:auto;
 }
   #imp-preview-head{
-  height:90px;
+  min-height:90px;
   padding:18px;
   background-color:#eceff0;
   border-bottom:1px solid #d0d0d0;
